<resources>
    <string name="app_name">Rester</string>
    <string name="text_edit_database">Edit Data</string>
    <string name="action_settings">Settings</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="default_ip_address">192.168.1.1</string>
    <string name="btn_thai_language">Thai Language</string>
    <string name="btn_english_language">English Language</string>
    <string name="text_your_name">Your Name</string>
    <string name="text_master_ip_address">Master IP Address</string>
    <string name="text_btn_confirm_order_food">Confirm Order</string>
    <string name="text_add">Add</string>
    <string name="send_order_fialed">Can\'t connect to master, please try again.</string>
    <string name="text_take_here">Eat in</string>
    <string name="text_take_home">Take-away</string>
    <string name="text_choose_take">Eat in or take-away?</string>
    <string name="text_price">price</string>
    <string name="text_baht"> ฿</string>
    <string name="text_quantity">quantity</string>
    <string name="text_item">item</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_the_order_summary">The order summary</string>
    <string name="text_total_amount">Total amount</string>
    <string name="text_no_order">No.</string>
    <string name="text_order_time">Order time</string>
    <string name="taste_optional">taste (optional)</string>
    <string name="text_delete">Delete</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete_or_edit">Do you want to delete or edit.</string>
    <string name="order_detail">Order detail</string>
    <string name="date_time">Date/Time</string>
    <string name="receipt">Receipt</string>
    <string name="press_one_again">Press once again to exit!</string>
    <string name="order_item_status_done">Done</string>
    <string name="order_item_status_served">Served</string>
    <string name="payment_successful">Payment Successful</string>
</resources>
